<resources>
    <string name="app_name">DroidRestaurant</string>
    <string name="server_domain">http://test.api.catering.bluecodegames.com/</string>

    <string name="home_title">Bienvenue chez</string>
    <string name="home_starters">Entrées</string>
    <string name="home_main_dishes">Plats</string>
    <string name="home_desert">Desserts</string>

    <string name="category_error_server">Impossible de récupérer la liste des %1s. Veuillez réessayer plus tard</string>
    <string name="category_error_empty">Aucun plat proposé à la carte du restaurant pour le moment. \n\nVeuillez réessayer plus tard</string>

    <string name="basket_title">Panier</string>
    <string name="basket_quantity">quantité : %1s</string>
    <string name="basket_error_empty">Aucun plat dans votre panier</string>
    <string name="basket_login_info">Vous devez vous inscrire avant de passer commande</string>
    <string name="basket_action">Passer commande</string>

    <string name="detail_global_amount">Total %1s</string>
    <string name="register_title">Inscription</string>
    <string name="register_first_name">prénom</string>
    <string name="register_last_name">nom</string>
    <string name="register_mail">e-mail</string>
    <string name="register_address">adresse</string>
    <string name="register_password">mot de passe</string>
    <string name="register_confirm">Valider</string>
    <string name="register_login">Vous avez déjà un compte ?</string>
    <string name="login_title">Connexion</string>
    <string name="login_register">Inscrivez vous si vous n\'avez pas de compte</string>

    <string name="order_title">Commande</string>
    <string name="order_description">Votre commande a bien été enregistrée.
        Notre livreur arrivera prochainement chez vous avec votre repas.</string>
    <string name="order_description_error">Votre commande n\'a pas pu aboutir. Veuilliez réessayer plus tard.</string>
    <string name="order_back_home">Retour au menu</string>
</resources>