<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <TextView
        android:id="@+id/welcome"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/raleway_semibold"
        android:gravity="end"
        android:text="@string/home_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/orange_500"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/restaurantName"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/restaurantLogo"
        android:layout_width="140dp"
        android:layout_height="160dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/android_logo_restaurant"
        android:importantForAccessibility="no" />

    <TextView
        android:id="@+id/restaurantName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/architects_daughter"
        android:text="@string/app_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/brown"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@+id/restaurantLogo"
        app:layout_constraintHorizontal_bias="0.7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome" />

    <TextView
        android:id="@+id/starters"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/raleway_semibold"
        android:gravity="center"
        android:text="@string/home_starters"
        android:textColor="@color/orange_500"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/restaurantName" />

    <View
        android:layout_width="260dp"
        android:layout_height="1dp"
        android:layout_marginTop="32dp"
        android:background="@color/brown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/starters" />

    <TextView
        android:id="@+id/mainDishes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/raleway_semibold"
        android:gravity="center"
        android:text="@string/home_main_dishes"
        android:textColor="@color/orange_500"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/starters" />

    <View
        android:layout_width="260dp"
        android:layout_height="1dp"
        android:layout_marginTop="32dp"
        android:background="@color/brown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mainDishes" />

    <TextView
        android:id="@+id/deserts"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/raleway_semibold"
        android:gravity="center"
        android:text="@string/home_desert"
        android:textColor="@color/orange_500"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainDishes" />

</androidx.constraintlayout.widget.ConstraintLayout>